refactor: replace Lists with Sets in analyzer state to ensure uniqueness